fix(perc-toolkit): Xlint batch 1 — generics + easy wins (#2030)
Partial cleanup under parent #2200. Live main-source project -Xlint
diagnostics 87→26 via real generics and mechanical easy wins.

- Replace for-removal boxed Long/Double/Boolean constructors
- Add serialVersionUID; annotate QueuedEdition/PublishEditionService @Deprecated
- Type servlet map/enumeration overrides, JAXB Class, List/Iterator consumers
- SlotItemComparator.hashCode; unit tests for URL parse/mutable URL/comparator

Refs #2200
Partial for #2030

> Co-Authored by Grok Build using grok-4.5 with agent main.